--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <div id="Dialog">
             <h1 id="DialogTitle">Title</h1>
             <p id="DialogText">Text</p>
-            <button onclick="javascript:document.getElementById('ImmersiveDialog').style.display = 'none';eval(CommandToExecuteImmersiveDialog)" Selaria style="width: 519px;">O.K.</button>
+            <button onclick="javascript:document.getElementById('ImmersiveDialog').style.display = 'none';eval(CommandToExecuteImmersiveDialog)" Selaria style="width: 519px;" id="DialogContinue">Continue</button>
+            <button onclick="javascript:document.getElementById('ImmersiveDialog').style.display = 'none';" Selaria style="width: 519px;" id="DialogCancel">Cancel</button>
         </div>
     </div>
 </body>
