--- a/apps/test.html
+++ b/apps/test.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-    </style>
     <script src="../../dist/winbox.bundle.js"></script>
     <link rel="stylesheet" href="../apps UI/ui.css">
     <script>
@@ -19,8 +17,8 @@
     </script>
 </head>
 <body>
-    <button onclick="javascript:parent.ShowImmersiveDialog('A simple dialog ...','This is a simple immersive dialog !')" Selaria>Show a immersive dialog !</button>
-    <button onclick="javascript:parent.ShowImmersiveDialog('A simple dialog ...','This is a simple immersive dialog !',false)" Selaria>Show a uncancellable immersive dialog !</button>
+    <button onclick="javascript:parent.ShowImmersiveDialog('A simple dialog ...','This is a simple immersive dialog !')">Show a immersive dialog !</button>
+    <button onclick="javascript:parent.ShowImmersiveDialog('A simple dialog ...','This is a simple immersive dialog !',false)">Show a uncancellable immersive dialog !</button>
 </body>
 <script>
 </script>
