--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="dist/winbox.bundle.js"></script>
     <title>Selaria</title>
     <link rel="shortcut icon" href="ressources/logo/logo.ico" type="images/x-icon" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https///code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <style>
