--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <script src="dist/winbox.bundle.js"></script>
     <title>Selaria</title>
     <link rel="shortcut icon" href="ressources/logo/logo.ico" type="images/x-icon" />
-    <link rel="stylesheet" href="https///code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="ressources/FileSystem/dist/idbfs.js"></script>
     <style>
         body{
@@ -237,5 +235,10 @@
         document.body.style.backgroundImage = "url('ressources/background/bgdefault.png')";
     }, 315);
     document.getElementById("Username").innerHTML = localStorage.getItem("Username");
+    console.log(`
+██ ██ █╬ ███ ███ █ ███   Welcome to Selaria "OS" !
+█▄ █▄ █╬ █▄█ █▄╬ █ █▄█   Don't white anything here if you don't know what you do !
+▄█ █▄ ██ █╬█ █╬█ █ █╬█   Https://www.GitHub.Com/Yannou000/Selaria !
+    `);
 </script>
 </html>
