--- a/index.html
+++ b/index.html
@@ -21,19 +21,14 @@
 <body onload="javascript:load();">
     <div class="bar" id="bar_id">
         <button id="bar_base_button_O" class="bar_button" onclick="javascript:open_menu('bar_menu_O');" title="The menu for access the applications !">
-            <span class="gg-components"></span>
+            <svg width="19" height="19" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.14106 6.78591C7.75054 6.39538 7.75054 5.76222 8.14106 5.3717L10.7927 2.72005C11.1832 2.32952 11.8164 2.32952 12.2069 2.72004L14.8586 5.37169C15.2491 5.76221 15.2491 6.39539 14.8586 6.78591L12.2069 9.43754C11.8164 9.82805 11.1832 9.82805 10.7927 9.43753L8.14106 6.78591ZM10.8222 6.75645C10.4479 6.3822 10.4479 5.77541 10.8222 5.40115V5.40115C11.1964 5.0269 11.8032 5.02689 12.1774 5.40113V5.40113C12.5517 5.77539 12.5517 6.38221 12.1774 6.75648V6.75648C11.8032 7.13072 11.1964 7.13071 10.8222 6.75645V6.75645Z" fill="white"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M2.72005 12.207C2.32953 11.8165 2.32952 11.1833 2.72005 10.7928L5.37169 8.14113C5.76222 7.75061 6.39539 7.75061 6.78591 8.14113L9.43753 10.7928C9.82805 11.1833 9.82805 11.8165 9.43752 12.207L6.78591 14.8586C6.39538 15.2491 5.76222 15.2491 5.3717 14.8586L2.72005 12.207ZM5.40117 12.1775C5.02691 11.8033 5.02691 11.1965 5.40117 10.8222V10.8222C5.77542 10.448 6.38219 10.448 6.75644 10.8222V10.8222C7.1307 11.1965 7.1307 11.8033 6.75644 12.1775V12.1775C6.38219 12.5518 5.77542 12.5518 5.40117 12.1775V12.1775Z" fill="white"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.5624 10.7928C13.1719 11.1833 13.1719 11.8165 13.5624 12.207L16.214 14.8586C16.6045 15.2491 17.2377 15.2491 17.6282 14.8586L20.2799 12.207C20.6704 11.8165 20.6704 11.1833 20.2799 10.7928L17.6282 8.14112C17.2377 7.7506 16.6045 7.7506 16.214 8.14113L13.5624 10.7928ZM17.5987 10.8222C17.2245 10.448 16.6177 10.448 16.2435 10.8222V10.8222C15.8692 11.1965 15.8692 11.8033 16.2435 12.1775V12.1775C16.6177 12.5518 17.2245 12.5518 17.5987 12.1775V12.1775C17.973 11.8033 17.973 11.1965 17.5987 10.8222V10.8222Z" fill="white"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.14106 17.6283C7.75054 17.2378 7.75053 16.6046 8.14105 16.2141L10.7927 13.5624C11.1832 13.1719 11.8164 13.1719 12.2069 13.5624L14.8586 16.2141C15.2491 16.6046 15.2491 17.2378 14.8586 17.6283L12.2069 20.2799C11.8164 20.6705 11.1832 20.6705 10.7927 20.2799L8.14106 17.6283ZM10.8222 17.5989C10.4479 17.2246 10.4479 16.6178 10.8222 16.2436V16.2436C11.1964 15.8693 11.8032 15.8693 12.1774 16.2435V16.2435C12.5517 16.6178 12.5517 17.2246 12.1774 17.5989V17.5989C11.8032 17.9731 11.1964 17.9731 10.8222 17.5989V17.5989Z" fill="white"/>
+            </svg>
         </button>
-        <button id="time_base_button" class="bar_button" style="position: fixed;left: 47.9%;" title="The local date !">Unable to find the date !</button>
-        <button id="bar_base_button" class="bar_button" style="float: right;" onclick="javascript:open_menu('barmenu_Power');">
-            <span class="gg-log-off"></span>
-        </button>
-        
-        <button id="bar_base_button" class="bar_button" style="float: right;" onclick="javascript:open_menu('command_line');" title="Show the command line !">
-            <span class="gg-terminal"></span>
-        </button>
-        <button id="bar_base_button" class="bar_button" style="float: right;" onclick="javascript:open_menu('notes'); localStorage.setItem('notes' , document.getElementById('notes').value);" title="Take notes !">
-            <span class="gg-album"></span>
-        </button>
+        <button id="time_base_button" class="bar_button" style="position: fixed;right: 9px;" title="The local date !">Unable to find the date !</button>
     </div>
     <input type="text" name="" id="command_line" class="bar_button" onkeydown="var keyCode = ('which' in event) ? event.which : event.keyCode;if(keyCode == 13){javascript:eval(this.value);};">
     <div id="Notification" onclick="javascript:eval(notification_to_execute);">
@@ -46,7 +41,7 @@
             <div id="RightIcons">
                 <svg width="29" height="25" viewBox="0 0 17 7" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="javascript:document.getElementById('SmartOpenContainer').style.display = 'block';document.getElementById('InputOpenApp').focus()">
                     <path d="M6.53262 1.05279C6.70202 0.714003 7.04828 0.5 7.42705 0.5H14.0729C14.8163 0.5 15.2998 1.28231 14.9674 1.94721L12.9674 5.94721C12.798 6.286 12.4517 6.5 12.0729 6.5H5.42705C4.68367 6.5 4.20017 5.71769 4.53262 5.05279L6.53262 1.05279Z" stroke="white"/>
-                    <path d="M3.36179 0.276397C3.44649 0.107003 3.61962 0 3.80901 0H4.69099C5.06268 0 5.30443 0.391152 5.13821 0.723603C5.05351 0.892997 4.88038 1 4.69099 1H3.80901C3.43732 1 3.19557 0.608848 3.36179 0.276397Z" fill="white"/>
+                    <path d="M3.36179 0.276397C3.44649 0.107003 3.61962 0 3.80901 0H4.69099C5.06268 0 5.30443 0.25152 5.13821 0.723603C5.05351 0.892997 4.88038 1 4.69099 1H3.80901C3.43732 1 3.19557 0.608848 3.36179 0.276397Z" fill="white"/>
                     <path d="M2.36179 2.2764C2.44649 2.107 2.61962 2 2.80901 2H3.69099C4.06268 2 4.30443 2.39115 4.13821 2.7236C4.05351 2.893 3.88038 3 3.69099 3H2.80901C2.43732 3 2.19557 2.60885 2.36179 2.2764Z" fill="white"/>
                     <path d="M1.36179 4.2764C1.44649 4.107 1.61962 4 1.80901 4H2.69099C3.06268 4 3.30443 4.39115 3.13821 4.7236C3.05351 4.893 2.88038 5 2.69099 5H1.80901C1.43732 5 1.19557 4.60885 1.36179 4.2764Z" fill="white"/>
                     <path d="M0.361793 6.2764C0.446488 6.107 0.619621 6 0.809009 6H1.69099C2.06268 6 2.30443 6.39115 2.13821 6.7236C2.05351 6.893 1.88038 7 1.69099 7H0.809008C0.437319 7 0.195572 6.60885 0.361793 6.2764Z" fill="white"/>
@@ -58,7 +53,7 @@
                 </svg>
                 <svg width="25" height="25" viewBox="0 0 8 9" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="javascript:document.getElementById('Screensaver').style.display = 'block';">
                     <g clip-path="url(#clip0_5_41)">
-                    <path d="M5.67702 1.82026C5.76806 1.64604 5.98518 1.57675 6.15184 1.68233C6.80198 2.09415 7.32064 2.68539 7.64171 3.38695C8.01238 4.19674 8.0984 5.10661 7.88598 5.97071C7.67355 6.83481 7.17499 7.60309 6.47024 8.15236C5.7655 8.70168 4.89537 9.00016 3.99933 9C3.10329 8.99984 2.23325 8.70104 1.52869 8.15151C0.82412 7.60198 0.325834 6.83354 0.113708 5.96938C-0.0984175 5.10523 -0.0120978 4.19539 0.35883 3.38573C0.680184 2.68428 1.19903 2.09321 1.84928 1.68161C2.01598 1.57609 2.2331 1.64544 2.32408 1.81969C2.41506 1.99394 2.34516 2.20684 2.18056 2.31558C1.67182 2.65165 1.26552 3.12349 1.01059 3.67995C0.706056 4.34468 0.635187 5.09166 0.809341 5.80114C0.983496 6.51065 1.39259 7.1415 1.97104 7.59266C2.54949 8.04383 3.2638 8.28916 3.99945 8.28927C4.7351 8.28942 5.4495 8.04436 6.02811 7.59335C6.60672 7.1424 7.016 6.51166 7.1904 5.80219C7.3648 5.09279 7.29419 4.34578 6.98987 3.68095C6.73515 3.1244 6.32896 2.65243 5.82038 2.31619C5.65579 2.2074 5.58598 1.99447 5.67702 1.82026Z" fill="white"/>
+                    <path d="M5.67702 1.82026C5.76806 1.64604 5.98518 1.57675 6.15184 1.68233C6.80198 2.09415 7.32064 2.68539 7.64171 3.38695C8.01238 4.19674 8.0984 5.10661 7.88598 5.97071C7.67355 6.83481 7.17499 7.60309 6.47024 8.15236C5.7655 8.70168 4.89537 9.00016 3.99933 9C3.10329 8.99984 2.23325 8.70104 1.52869 8.15151C0.82412 7.60198 0.325834 6.83354 0.113708 5.96938C-0.1984175 5.10523 -0.0120978 4.19539 0.35883 3.38573C0.680184 2.68428 1.19903 2.09321 1.84928 1.68161C2.01598 1.57609 2.2331 1.64544 2.32408 1.81969C2.41506 1.99394 2.34516 2.20684 2.18056 2.31558C1.67182 2.65165 1.26552 3.12349 1.01059 3.67995C0.706056 4.34468 0.635187 5.09166 0.809341 5.80114C0.1983496 6.51065 1.39259 7.1415 1.97104 7.59266C2.54949 8.04383 3.2638 8.28916 3.99945 8.28927C4.7351 8.28942 5.4495 8.04436 6.02811 7.59335C6.60672 7.1424 7.016 6.51166 7.1904 5.80219C7.3648 5.09279 7.29419 4.34578 6.98987 3.68095C6.73515 3.1244 6.32896 2.65243 5.82038 2.31619C5.65579 2.2074 5.58598 1.99447 5.67702 1.82026Z" fill="white"/>
                     <path d="M4.26667 0.264706C4.26667 0.118513 4.14728 0 4 0C3.85273 0 3.73334 0.118513 3.73334 0.264706V4.5C3.73334 4.64619 3.85273 4.76471 4 4.76471C4.14728 4.76471 4.26667 4.64619 4.26667 4.5V0.264706Z" fill="white"/>
                     </g>
                     <defs>
@@ -103,13 +98,14 @@
                 </svg>
                 <p>VM</p>
             </div>
-            <div class="PinnedApplication" onclick="open_app('https://classic.minecraft.net/')">
-                <svg width="15" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 11.191V4.30902L6 6.80902V13.691L1 11.191Z" stroke="white"/>
-                    <path d="M12 11.191V4.30902L7 6.80902V13.691L12 11.191Z" stroke="white"/>
-                    <path d="M6.5 1.05902L11.382 3.5L6.5 5.94098L1.61803 3.5L6.5 1.05902Z" stroke="white"/>
+            <div class="PinnedApplication" onclick="open_app('apps/Browser.html');">
+                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="0.5" y="0.5" width="14" height="14" rx="7" stroke="white"/>
+                    <path d="M7.5 0.5L6.95137 2.78349C6.46637 4.80215 7.99634 6.74324 10.0724 6.74324V6.74324C11.2587 6.74324 12.3483 7.39755 12.9058 8.44471L14 10.5" stroke="white"/>
+                    <path d="M3.5 13.5V13.5C4.33966 11.8937 3.76939 9.91109 2.20459 8.9964L0.5 8" stroke="white"/>
+                    <path d="M9.63423 10.5123C9.78494 10.7132 9.64156 11 9.39039 11C9.19209 11 9.04659 10.8136 9.09468 10.6213C9.15693 10.3723 9.48024 10.307 9.63423 10.5123Z" stroke="white"/>
                 </svg>
-                <p>Minecraft</p>
+                <p>Browser</p>
             </div>
         </div>
         <div id="Applications">
@@ -166,18 +162,12 @@
             </div>
         </div>
     </div>
-    <div class="bar_menu" id="bar_menu_apps">
-        <button class="bar_button menu_button_long" onclick="javascript:document.getElementById('AppInstaller').style.display = 'block';">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4Z" fill="currentColor" /><path fill-rule="evenodd" clip-rule="evenodd" d="M13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7V11H7C6.44772 11 6 11.4477 6 12C6 12.5523 6.44772 13 7 13H11V17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17V13H17C17.5523 13 18 12.5523 18 12C18 11.4477 17.5523 11 17 11H13V7Z" fill="currentColor"/></svg>
-        </button>
-    </div>
-    <div class="bar_menu_right" id="barmenu_Power">
-        <button class="bar_button menu_button_long" onclick="javascript:document.getElementById('Screensaver').style.display = 'block';">Screensaver</button>
-    </div>
     <div class="bar_menu" id="context_menu">
         <button class="bar_button menu_button_long" onclick="javascript:document.getElementById('SmartOpenContainer').style.display = 'block';document.getElementById('InputOpenApp').focus()">execute</button>
         <button class="bar_button menu_button_long" onclick="javascript:document.getElementById('Screensaver').style.display = 'block';">Screensaver</button>
         <button class="bar_button menu_button_long" onclick="javascript:open_app('apps/about.html');">About</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_menu('command_line');">Command bar</button>
+        <button class="bar_button menu_button_long" onclick="javascript:open_menu('notes');">Notes</button>
     </div>
     <div class="bar_menu" id="context_menu_O">
         <button class="bar_button menu_button_long" onclick="javascript:document.getElementById('Screensaver').style.display = 'block';">Screensaver</button>
@@ -205,7 +195,7 @@
             <p style="color: red;display: none;" id="UserControlInvalidPassword">Mot de passe incorrect .</p>
         </div>
     </div>
-    <div id="Screensaver" style="display: none;cursor: none;" onclick="javascript:this.style.display='none';ShowUserControl('OFF' , 'Login');">
+    <div id="Screensaver" style="display: none;cursor: none;" onclick="javascript:this.style.display='none';if(localStorage.getItem('Password') != ''){ShowUserControl('OFF' , 'Login');}">
     </div>
     <div id="SmartOpenContainer" style="display: none;">
         <h1>Open application .</h1>
