A Tiny part of the FileSystem !

--- a/system_page/important_error.html
+++ b/system_page/important_error.html
@@ -48,9 +48,16 @@
             document.body.innerHTML = "<h1>Repair</h1><p>Selaria has detected that your localStorage is corrupted . We need to delete all the LocalStorage and IndexedDataBase . This does not have any damage to your host computer . <strong>If it's the first time you launch this Operating System , is normal</strong> .</p>";
             setTimeout(function(){
                 localStorage.clear();
+                const IDD = indexedDB
+				 || webkitIndexedDB
+				 || mozIndexedDB;
+			    const deletedDbs = [];
+			    IDD.databases()
+			    	.then(DBS => DBS.forEach(DB => {IDD.deleteDatabase(DB.name); deletedDbs.push(DB.name);}))
+			    	.then(function () {self.postMessage(deletedDbs)});
+                }, 5319);
                 window.location.href = "../index.html";
                 localStorage.setItem("localStorageVerification", "Normal");
-            }, 5319);
         }
     }, 5000);
 </script>
