--- a/system_page/Obbe.html
+++ b/system_page/Obbe.html
@@ -97,10 +97,12 @@
                 localStorage.setItem("Username", document.getElementById("Username").value);
                 localStorage.setItem("Password", document.getElementById("Password").value);
                 localStorage.setItem("Configured", "true");
-                var CreateFS = new IDBFS.FileSystem("MainFS");
+                var CreateFS = new IDBFS.FileSystem("Selaria");
+                CreateFS.mkdir("/Softwares");
+                CreateFS.mkdir("/Documents");
                 document.getElementById("Container").innerHTML = "<h1>The OBBE is over !</h1><br><h3>Please patient ...</h3>";
                 setTimeout(function(){
-                    document.location.href = "../index.html?Command=notification('Welcome to your computer , ' + localStorage.getItem('Username') + ' !', 'Thanks to use Selaria !', '')";
+                    document.location.href = "../index.html";
                 }, 3001);
             }
             else{
