File system unfunctionnal !

--- a/apps/FileExplorer.html
+++ b/apps/FileExplorer.html
@@ -7,11 +7,9 @@
     <title>Document</title>
     <script src="../ressources/FileSystem/dist/idbfs.js"></script>
     <script src="../ressources/System/Software/MessageHandlerSoftware.js"></script>
-    <script src="../../dist/winbox.bundle.js"></script>
     <link rel="stylesheet" href="../apps UI/ui.css">
-    <link rel="stylesheet" href="../Icon UI/Icons.css">
     <script>
-        console.log(parent.ListFolder("/"));
+        var SelariaSystem = new IDBFS.FileSystem("Selaria");
     </script>
 </head>
 <body>
