--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ressources/System/MessageHandlerCode.js"></script>
+    <script src="ressources/System/API/FileSystemAPI.js"></script>
     <script src="ressources/System/MainScript.js"></script>
     <link rel="stylesheet" href="Icon UI/Icons.css">
     <script src="dist/winbox.bundle.js"></script>
