New version of Winbox , Web browser and Drag and drop links !

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="ressources/System/API/FileSystemAPI.js"></script>
     <script src="ressources/System/MainScript.js"></script>
     <link rel="stylesheet" href="Icon UI/Icons.css">
-    <script src="dist/winbox.bundle.js"></script>
+    <script src="https://rawcdn.githack.com/nextapps-de/winbox/0.2.5/dist/winbox.bundle.min.js"></script>
     <title>Selaria</title>
     <link rel="shortcut icon" href="ressources/logo/logo.ico" type="images/x-icon" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -100,7 +100,7 @@
                 </svg>
                 <p>VM</p>
             </div>
-            <div class="PinnedApplication" onclick="open_app('apps/Browser.html');">
+            <div class="PinnedApplication" onclick="open_app('ressources/System/Browser/Border/index.html');">
                 <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect x="0.5" y="0.5" width="14" height="14" rx="7" stroke="white"/>
                     <path d="M7.5 0.5L6.95137 2.78349C6.46637 4.80215 7.99634 6.74324 10.0724 6.74324V6.74324C11.2587 6.74324 12.3483 7.39755 12.9058 8.44471L14 10.5" stroke="white"/>
