--- a/apps/about.html
+++ b/apps/about.html
@@ -23,6 +23,8 @@
     <p><strong>year :</strong> 2022</p>
     <p><strong>language : </strong><span id="LANGUAGE"></span></p>
     <p><strong>online : </strong><span id="ONLINE"></span></p>
+    <p><strong>Windows manager : </strong>Winbox.JS</p>
+    <p><strong>Web browser : </strong>Border (Onofficiel) !</p>
 </body>
 <script>
     document.getElementById("LANGUAGE").innerHTML = navigator.language;
