--- a/apps/test.html
+++ b/apps/test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="../ressources/FileSystem/dist/idbfs.js"></script>
     <script src="../ressources/System/Software/MessageHandlerSoftware.js"></script>
-    <script src="../../dist/winbox.bundle.js"></script>
+    <script src="https://rawcdn.githack.com/nextapps-de/winbox/0.2.5/dist/winbox.bundle.min.js"></script>
     <link rel="stylesheet" href="../apps UI/ui.css">
     <link rel="stylesheet" href="../Icon UI/Icons.css">
     <script>
