Global menu first update !

--- a/apps/test.html
+++ b/apps/test.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="../apps UI/ui.css">
     <link rel="stylesheet" href="../Icon UI/Icons.css">
     <script>
-        console.log(parent.ListFolder("/"));
+        parent.document.getElementById("GlobalMenu").innerHTML=`
+<button class="bar_button" onclick="alert('Hey je fonctionne !')">App !</button>
+`;
     </script>
 </head>
 <body>
